--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset=UTF-8>
-    <link href="style.css" rel="stylesheet">
+    <link href="./CSS/style.css" rel="stylesheet">
 
     <title>12</title>
   </head>
@@ -38,13 +38,13 @@
 </div>
 <script src='http://fe.it-academy.by/JQ/jquery.js'></script>
 
-     <script type="text/javascript" src="script.js">
+     <script type="text/javascript" src="./JS/script.js">
 </script> 
- <script type="text/javascript" src="clockSVG.js">
+ <script type="text/javascript" src="./JS/clockSVG.js">
 </script>
- <script type="text/javascript" src="car.js">
+ <script type="text/javascript" src="./JS/car.js">
 </script>
- <script type="text/javascript" src="home.js">
+ <script type="text/javascript" src="./JS/home.js">
 </script>
 
 
