--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset=UTF-8>
     <link href="./CSS/style.css" rel="stylesheet">
 
-    <title>12</title>
+    <title>Coloring</title>
   </head>
   <body>
 
